<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context="com.example.android.linuxquiz.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/question1"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_button_q1_ans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_ans1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_button_q1_ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_ans2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_button_q1_ans3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_ans3"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_button_q1_ans4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/q1_ans4"
                android:textSize="16sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="#808080" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/question2"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkbox_q2_ans1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_ans1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_q2_ans2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_ans2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_q2_ans3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_ans3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_q2_ans4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/q2_ans4"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="#808080" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question3"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edittext_q3_ans1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/hint_for_q3"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textview_q3_ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="#808080" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question4"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_button_q4_ans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_ans1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_button_q4_ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_ans2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_button_q4_ans3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_ans3"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_button_q4_ans4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/q4_ans4"
                android:textSize="16sp" />
        </RadioGroup>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="#808080" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question5"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edittext_q5_ans1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/hint_for_q5"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textview_q5_ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:onClick="checkAnswers"
            android:text="@string/check" />

        <TextView
            android:id="@+id/textview_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:textSize="24sp" />


        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:onClick="shareResult"
            android:text="@string/share_button_label"
            android:visibility="gone" />

        <Button

            android:id="@+id/open_answers_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:onClick="seeAnswers"
            android:text="@string/see_answers"
            android:visibility="gone" />


    </LinearLayout>
</ScrollView>